Frontend: Fix overflowing stuff

--- a/frontend/src/app/app-footer/app-footer.component.css
+++ b/frontend/src/app/app-footer/app-footer.component.css
@@ -1,6 +1,6 @@
 .app-footer {
+  margin: 4em 0 3em;
   font-size: 80%;
-
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
