--- a/frontend/src/app/app-header/app-header.component.css
+++ b/frontend/src/app/app-header/app-header.component.css
@@ -1,3 +1,7 @@
+.app-header {
+  margin: 3em 0 4em;
+}
+
 a, a:link, a:visited, a:hover, a:active {
   color: rgba(0,0,0,.87);
   text-decoration: none;
