--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,9 +1,9 @@
 .mercury-root {
-  padding: 3em;
+  padding: 0 3em;
   box-sizing: border-box;
-  height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
 }
 
